# acme

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_package.yml
acme/analysis/: shape.py
acme/analysis/tests/: test_shape.py
