[build-system]
requires = [
    "setuptools >= 66",
    "wheel",
    "setuptools_scm >= 6.4",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # common dependencies
    "importlib-metadata",
    "h5py == 3.7.0",
    "matplotlib == 3.6.0",
    "numpy == 1.23.0",
    "seaborn == 0.11.0",
    "scikit-learn == 1.2.0",
    "scipy == 1.9.0",
    "dipy == 1.7.0",
    "fury == 0.8.0",
    "nibabel == 4.0.0",
    "scilpy @ git+https://github.com/scilus/scilpy@eb5d3fbe3cb2697a1ea90fe8ea88512e9686802b",
]
description = "ACME"
dynamic = ["version"]
keywords = ["software"]
maintainers = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
name = "acme"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "hypothesis >= 6.8.0",
    "pytest == 7.2.0",
    "pytest-cov",
    "pytest-pep8",
    "pytest-xdist",
    "pytest_console_scripts == 1.3.0",
]
dev = [
    "black == 22.12",
    "flake8 == 3.9.2",
    "flake8-docstrings == 1.6.0",
    "isort == 5.12.0",
    "pre-commit >= 2.9.0",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    # "toml",
]

[options.extras_require]
all = [
    "%(test)s",
]

[project.urls]
homepage = "https://github.com/jhlegarreta/acme"
documentation = "https://acme.readthedocs.io/en/latest/"
repository = "https://github.com/jhlegarreta/acme"

[tool.black]
line-length = 79
target-version = ["py310"]
exclude ='''
(
  /(
      \.eggs        # exclude a few common directories in the
    | \.git         # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | data            # also separately exclude project-specific files
                    # and folders in the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["acme"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools_scm]
write_to = "acme/_version.py"

